Removed Ex2 Map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/myFolder/myMaps/GP7_Fabrice_EX1_V2.GP7_Fabrice_EX1_V2
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+EditorStartupMap=/Game/myFolder/myMaps/GP7_Fabrice_EX1_V2.GP7_Fabrice_EX1_V2
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
